--- a/.github/workflows/Matrix_Strategy.yml
+++ b/.github/workflows/Matrix_Strategy.yml
@@ -8,8 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [16, 18, 20]
+        os: [ubuntu-latest, macos-latest]
+        node-version: [18, 20]
 
     steps:
       - uses: actions/checkout@v3
