--- a/.github/workflows/mide_tiempo.yml
+++ b/.github/workflows/mide_tiempo.yml
@@ -1,4 +1,4 @@
-name: CI without cache
+name: CI with cache
 
 on: [push]
 
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
+          cache: 'npm'
 
-      - run: npm install
+      - run: npm ci
 
       - run: npm test
-
