--- a/.github/workflows/mide_tiempo.yml
+++ b/.github/workflows/mide_tiempo.yml
@@ -17,3 +17,11 @@ jobs:
       - run: npm ci
 
       - run: npm test
+
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+            path: ~/.npm
+            key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+            restore-keys: |
+                ${{ runner.os }}-node-
